--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,8 @@
 body {
-  font-family: 'Cormorant Garamond', serif;
-  font-weight: 5;
+  font-family: 'EB Garamond', serif;
 }
 
 .chart {
-  width: 100%; 
+  width: 100%;
   height: 400px;
 }
